flux/flux-system/web-ui.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web-ui
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: flux-web-ui
      sectionName: flux
  hostnames:
    - flux.i.recompiled.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          namespace: auth
          port: 4180
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExternalAuth
          externalAuth:
            protocol: HTTP
            backendRef:
              name: oauth2-proxy
              namespace: auth
              port: 4180
            http:
              allowedHeaders:
                - Cookie
                - Accept
                - X-Forwarded-For
              allowedResponseHeaders:
                - X-Auth-Request-User
                - X-Auth-Request-Email
      backendRefs:
        - name: flux-operator
          port: 9080
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-operator-web-gateway
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flux-operator
      app.kubernetes.io/instance: flux-operator
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9080"
              protocol: TCP
